--- a/templates/app/package.ejs
+++ b/templates/app/package.ejs
@@ -31,6 +31,7 @@
 <% } -%>
 <% if(program.auth){ -%>
         "koa-passport": "0.x.x",
+        "passport-local": "1.x.x",
 <% if(program.auth.facebook){ -%>
         "passport-facebook": "1.x.x",
 <% } -%>
