--- a/templates/app/views/ejs/site/index.html
+++ b/templates/app/views/ejs/site/index.html
@@ -1,215 +1,128 @@
-<section id="home">
-    <div class="container">
-    	<div class="row centered">
-    		<div class="col-lg-12">
-				<h1>Welcome To <b><%=title%></b></h1>
-				<h3>Show your product with this handsome theme.</h3>
-				<br>
-    		</div>
-    		
-    		<div class="col-lg-2">
-    			<h5>Amazing Results</h5>
-    			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    			<img class="hidden-xs hidden-sm hidden-md" src="http://www.blacktie.co/demo/pratt/assets/img/arrow1.png">
-    		</div>
-    		<div class="col-lg-8">
-    			<img class="img-responsive" src="http://www.blacktie.co/demo/pratt/assets/img/app-bg.png" alt="">
-    		</div>
-    		<div class="col-lg-2">
-    			<br>
-    			<img class="hidden-xs hidden-sm hidden-md" src="http://www.blacktie.co/demo/pratt/assets/img/arrow2.png">
-    			<h5>Awesome Design</h5>
-    			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    		</div>
-    	</div>
-    </div> <!--/ .container -->
-</section>
-
-
-<section id="desc">
-	<div class="container">
-		<div class="row centered">
-			<h1>Designed To Excel</h1>
-			<br>
-			<br>
-			<div class="col-lg-4">
-				<img src="http://www.blacktie.co/demo/pratt/assets/img/intro01.png" alt="">
-				<h3>Community</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-			</div>
-			<div class="col-lg-4">
-				<img src="http://www.blacktie.co/demo/pratt/assets/img/intro02.png" alt="">
-				<h3>Schedule</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-			</div>
-			<div class="col-lg-4">
-				<img src="http://www.blacktie.co/demo/pratt/assets/img/intro03.png" alt="">
-				<h3>Monitoring</h3>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-			</div>
-		</div>
-		<br>
-		<hr>
-    </div> <!--/ .container -->
-</section>
-
-<!-- FEATURES WRAP -->
-<section id="features">
+<!-- Header -->
+<header class="header">
 	<div class="container">
 		<div class="row">
-			<h1 class="centered">What's New?</h1>
-			<br>
-			<br>
-			<div class="col-lg-6 centered">
-				<img class="centered" src="http://www.blacktie.co/demo/pratt/assets/img/mobile.png" alt="">
-			</div>
-			
-			<div class="col-lg-6">
-				<h3>Some Features</h3>
-				<br>
-			<!-- ACCORDION -->
-	            <div class="accordion ac" id="accordion2">
-	                <div class="accordion-group">
-	                    <div class="accordion-heading">
-	                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-	                        First Class Design
-	                        </a>
-	                    </div><!-- /accordion-heading -->
-	                    <div id="collapseOne" class="accordion-body collapse in">
-	                        <div class="accordion-inner">
-							<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-							</div><!-- /accordion-inner -->
-	                    </div><!-- /collapse -->
-	                </div><!-- /accordion-group -->
-	                <br>
-	
-	                <div class="accordion-group">
-	                    <div class="accordion-heading">
-	                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-	                        Retina Ready Theme
-	                        </a>
-	                    </div>
-	                    <div id="collapseTwo" class="accordion-body collapse">
-	                        <div class="accordion-inner">
-							<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-							</div><!-- /accordion-inner -->
-	                    </div><!-- /collapse -->
-	                </div><!-- /accordion-group -->
-	                <br>
-	
-	                 <div class="accordion-group">
-	                    <div class="accordion-heading">
-	                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-	                        Awesome Support
-	                        </a>
-	                    </div>
-	                    <div id="collapseThree" class="accordion-body collapse">
-	                        <div class="accordion-inner">
-							<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-							</div><!-- /accordion-inner -->
-	                    </div><!-- /collapse -->
-	                </div><!-- /accordion-group -->
-	                <br>
-	                
-	                 <div class="accordion-group">
-	                    <div class="accordion-heading">
-	                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-	                        Responsive Design
-	                        </a>
-	                    </div>
-	                    <div id="collapseFour" class="accordion-body collapse">
-	                        <div class="accordion-inner">
-							<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-							</div><!-- /accordion-inner -->
-	                    </div><!-- /collapse -->
-	                </div><!-- /accordion-group -->
-	                <br>			
-				</div><!-- Accordion -->
-			</div>
-		</div>
-	</div><!--/ .container -->
-</section><!--/ #features -->
-
-
-<section id="showcase">
-	<div class="container">
-		<div class="row">
-			<h1 class="centered">Some Screenshots</h1>
-			<br>
-			<div class="col-lg-8 col-lg-offset-2">
-				<div id="carousel-example-generic" class="carousel slide">
-				  <!-- Indicators -->
-				  <ol class="carousel-indicators">
-				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-				  </ol>
+			<div class="col-lg-8 col-lg-push-2 text-center">
+				<h1><%=title%></h1>
+				<h2>Show your product with this handsome theme.</h2>
+				<p class="lead">
+					Pikachu diablo 3 asians angry birds final week varius le girlfriend in.
+					Feel Like a Sir panda blizzard hac mom nerd monday in on nyan cat.
+				</p>
 				
-				  <!-- Wrapper for slides -->
-				  <div class="carousel-inner">
-				    <div class="item active">
-				      <img src="http://www.blacktie.co/demo/pratt/assets/img/item-01.png" alt="">
-				    </div>
-				    <div class="item">
-				      <img src="http://www.blacktie.co/demo/pratt/assets/img/item-02.png" alt="">
-				    </div>
-				  </div>
+				<p><%=title%> thing is currently in active development and will be released this summer.<br>
+					In the meantime, please register to our waiting list to get notified first once something is launched.</p>
+					<br>
+				
+				<form class="form-inline" role="form">
+					<div class="form-group">
+						<input type="text" class="form-control input-lg" name="name" placeholder="Your Name">
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control input-lg" name="email" placeholder="Your Email">
+					</div>
+					<button type="submit" class="btn btn-lg btn-default">Subscribe</button>
+				</form>
+				<p class="small text-muted">Powered by Mailchimp. Unsubscribe at any time.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div id="illustration">
+					<img src="http://www.gettemplate.com/demo/superawesome/assets/images/ap-screenshot.png" alt="<%=title%> Screenshot" >
 				</div>
 			</div>
 		</div>
-		<br>
-		<br>
-		<br>	
-	</div><!-- /container -->
-</section>
-
-<section id="people">
-	<div class="container">
-		<div class="col-md-12 text-center"><h2>Random People With Sunglasses</h2></div>
-	    <div class="col-md-12 text-center">&nbsp;</div>
-	    <div class="col-md-8 col-md-offset-2 text-center">
-	      <div class="row hidden-xs">
-	       <div class="col-sm-2"><img class="img-circle grayscale" src="http://www.gravatar.com/avatar/5c708a2c9d25d1f2e4195ece1f1c684d?s=80"></div>
-	       <div class="col-sm-2"><img class="img-circle grayscale" src="http://www.gravatar.com/avatar/3bb38f66f79ca138f318af89fe6b02ec?s=80"></div>
-	       <div class="col-sm-2"><img class="img-circle grayscale" src="http://www.gravatar.com/avatar/3423a3e32fda92a5aaed72c7cde3849c?s=80"></div>
-	       <div class="col-sm-2"><img class="img-circle grayscale" src="http://www.gravatar.com/avatar/325b6c3c0a75bfdb72822035bb556826?s=80"></div>
-	       <div class="col-sm-2"><img class="img-circle grayscale" src="http://www.gravatar.com/avatar/cdd69340b0cfac4c7acb892e3ea7556e?s=80"></div>  
-	       <div class="col-sm-2"><img class="img-circle grayscale" src="http://www.gravatar.com/avatar/889778901fb1522dac2846ffe62bd960?s=80"></div>
-	     </div>
-	    </div>
 	</div>
-</section>
+</header>
+<!-- /Header -->
+	
 
-<section id="contact">
-	<div class="container">
-		<div class="col-lg-5">
-			<h3>Address</h3>
-			<p>
-			Av. Greenville 987,<br/>
-			New York,<br/>
-			90873<br/>
-			United States
-			</p>
+<!-- Content -->
+<main class="content">
+
+	<!-- Lead -->
+	<section class="container space-before space-after">
+		<div class="row">
+			<div class="col-sm-10 col-sm-push-1">
+				<h1 class="text-center">What it's all about</h1>
+				<p class="lead text-center">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+					Nam mi odio, gravida at turpis et, porta bibendum justo.
+				</p> 
+			</div>
 		</div>
+	</section>
+	<!-- /Lead -->
+
+
+
+	<!-- Features -->
+	<section class="container space-before space-after">
 		
-		<div class="col-lg-7">
-			<h3>Drop Us A Line</h3>
-			<br>
-			<form role="form" action="/doContact" method="post"> 
-			  <div class="form-group">
-			    <label for="name">Your Name</label>
-			    <input type="name" name="name" class="form-control" id="name" placeholder="Your Name">
-			  </div>
-			  <div class="form-group">
-			    <label for="email">Email address</label>
-			    <input type="email" name="mail" class="form-control" id="email" placeholder="Enter email">
-			  </div>
-			  <div class="form-group">
-			  	<label>Your Text</label>
-			  	<textarea class="form-control" name="message" rows="3"></textarea>
-			  </div>
-			  <br>
-			  <button type="submit" class="btn btn-large btn-success">SUBMIT</button>
-			</form>
+		<div class="row featurelist space-after">
+			<div class="col-md-5 col-sm-6 col-md-push-1 ">
+				<img class="img-feature img-responsive" src="http://www.gettemplate.com/demo/superawesome/assets/images/screen1.png" alt="Sample image">
+			</div>
+			<div class="col-md-5 col-md-push-1 col-sm-6">
+				<h2 class="space-before">The template is quite small, <span class="text-muted">so html code is simple</span></h2>
+				<p>What you have to ask yourself is, do I feel lucky. well do ya' punk? Ever notice how sometimes you come across somebody you shouldn't have f**ked with? Well, I'm that guy. Dyin' ain't much of a livin', boy.</p>
+			</div>
 		</div>
-	</div>
-</section>
+
+		<div class="row featurelist space-after">
+			<div class="col-md-5 col-sm-6 col-sm-push-6">
+				<img class="img-feature img-responsive" src="http://www.gettemplate.com/demo/superawesome/assets/images/screen2.png" alt="Sample image">
+			</div>
+			<div class="col-md-5 col-sm-6 col-md-pull-4 col-sm-pull-6">
+				<h2 class="space-before">Yes, I love cool backgrounds, <span class="text-muted">like the one used here</span></h2>
+				<p>There are 2 more color themes inside this template. You'll just need to uncomment 
+					few lines in the CSS file to activate any of them. </p>
+				<p>Now, continue with our lipsum :) 
+					This is the ak-47 assault rifle, The preferred weapon of your enemy; and it makes a distinctive sound when 
+					fired at you, so remember it. When a naked man's chasing a woman through an alley with a butcher knife and a hard-on, I figure he's not out collecting for the red cross. well, do you have anything to say for yourself? </p>
+			</div>
+		</div>
+
+		<div class="row featurelist space-after">
+			<div class="col-md-5 col-sm-6 col-md-push-1 col-sm-6">
+				<img class="img-feature img-responsive" src="http://www.gettemplate.com/demo/superawesome/assets/images/screen3.png" alt="Sample image">
+			</div>
+			<div class="col-md-5 col-md-push-1 col-sm-6">
+				<h2 class="space-before">Violet does look good too!</span></h2>
+				<p>Here. Put that in your report! And "I may have found a way out of here. you want a guarantee, buy a toaster. are you feeling lucky punk dyin' ain't much of a livin', boy. what you have to ask yourself is, Do I feel lucky. Well do ya' punk? You see, in this world there's two kinds of people, my friend: those with loaded guns and those who dig. you dig.</p>
+			</div>
+		</div>
+	</section>
+</main>
+
+<footer id="footer" class="jumbotron">
+	<section class="container">
+		<div class="row">
+			<div class="col-md-5 col-md-push-1">
+				<h2>Need help?</h2>
+				<p>For help with this or another template you've downloaded from GetTemplate, please email me at gt@gettemplate.com. </p>
+				<p>If you'd like to report a bug or suggest an improvement, post an issue on <a href="https://github.com/gusnips/node-koa-mvc/issues">GitHub</a> 
+				</p>
+			</div>
+			<div class="col-md-5 col-md-push-1">
+				<h2>Got your interest?</h2>
+				<p>Drop Us A Line!</p>
+				<form role="form" action="/contact" method="post"> 
+				  	<div class="input-group">
+				  		<span class="input-group-addon"><i class="fa fa-comments"></i></span>
+				    	<input type="name" id="name" name="name" class="form-control" placeholder="Your name">
+				  	</div>
+				  	<div class="input-group">
+				    	<span class="input-group-addon"><i class="fa fa-at-sign"></i></span>
+				    	<input type="email" id="email" name="mail" class="form-control" placeholder="Your email">
+				  	</div>
+				  	<div class="form-group">
+		  				<textarea class="form-control" id="message" name="message" placeholder="Enter your message" rows="3"></textarea>
+				  	</div>
+				  	<button type="submit" class="btn btn-large btn-success">Submit!</button>
+				</form>
+			</div>
+		</div>	
+	</section>
+</footer>
