--- a/templates/app/views/ejs/site/login.html
+++ b/templates/app/views/ejs/site/login.html
@@ -1,56 +1,79 @@
-<style>.icon-login{width:16px; height:20px}</style>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6" style="border-right: 1px solid #ddd">
-        <form class="form center-block col-md-10 col-md-offset-1" action="/login">
-          <legend>Login</legend>
-          <div class="form-group">
-            <input type="text" class="form-control input-lg" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control input-lg" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <button class="btn btn-primary btn-lg btn-block">Sign In</button>
-            <span class="pull-right"><a href="/reset-password">Forgot your password?</a></span>
-          </div>
-          <div style="text-align: center">
-                <div class="btn-group">
-                    <a class='btn btn-danger disabled'><i class="fa fa-google-plus icon-login"></i></a>
-                    <a class='btn btn-danger' href='' style="width:12em;"> Sign in with Google</a>
-                </div>
-                &nbsp;&nbsp;
-                <div class="btn-group">
-                    <a class='btn btn-primary disabled'><i class="fa fa-facebook icon-login"></i></a>
-                    <a class='btn btn-primary' href='' style="width:12em"> Sign in with Facebook</a>
-                </div>    
-                &nbsp;&nbsp;
-                <div class="btn-group">
-                    <a class='btn btn-info disabled'><i class="fa fa-twitter icon-login"></i></a>
-                    <a class='btn btn-info ' href='' style="width:12em"> Sign in with Twitter</a>
-                </div>
-                &nbsp;&nbsp;
-          </div>
-        </form>
-      </div>
-      <div class="col-md-6" style="border-right: 1px solid #ddd">
-        <form class="form center-block col-md-10 col-md-offset-1" action="/register">
-          <legend>Not a member yet?</legend>
-          <div class="form-group">
-            <input type="text" class="form-control input-lg" placeholder="Your Email">
-          </div>
-          <div class="form-group">
-            <input type="password" name="password" class="form-control input-lg" placeholder="New Password">
-          </div>
-          <div class="form-group">
-            <input type="password" name="repeatPassword" class="form-control input-lg" placeholder="Repeat the new password">
-          </div>
-          <div class="form-group">
-            <button class="btn btn-primary btn-lg btn-block">Register</button>
-          </div>
-        </form>
-      </div>
+<div class="container">
+    <div id="realContent" class="col-xs-12">
+        <div class="row">
+            <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-xs-12 col-sm-offset-0">
+              <h1>Jois us!</h1>
+            </div>
+        </div>
+        <div class="row">
+            <section class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-xs-12 col-sm-offset-0">
+                <div class="well well-lg">
+                    <div class="row">
+                        <div class="col-sm-6 col-xs-12">
+                            <div class="row">
+                                <div class="col-xs-12"><h3>Already a member? Login</h3></div>
+                            </div>
+                            <div class="row">
+                                <form id="loginForm" method="post" action="/login">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="fa fa-envelope fa-2x"></i></span>
+                                        <input id="email" class="form-control input-lg" placeholder="Email" required="required" maxlength="100" type="text" name="email" value="">
+                                    </div>
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="fa fa-asterisk fa-2x"></i></span>
+                                        <input id="password" class="form-control input-lg" placeholder="Password" required="required" maxlength="60" type="password" name="password">
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" id="btn-signup" class="btn btn-block btn-primary btn-lg">Sign Up</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12"><h3>Social Sign In</h3></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <ul id="social-sign-in" class="inline-block list-unstyled">
+                                      <li><a target="_blank" href="/auth/facebook" title="Sign in with Facebook" rel="nofollow"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                                      <li><a target="_blank" href="/auth/google" title="Sign in with Google" rel="nofollow"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+                                      <li><a target="_blank" href="/auth/github" title="Sign in with GitHub" rel="nofollow"><i class="fa fa-github-square fa-3x"></i></a></li>
+                                      <li><a target="_blank" href="/auth/bitbucket" title="Sign in with Bitbucket" rel="nofollow"><i class="fa fa-bitbucket-square fa-3x"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-xs-12">
+                            <div class="row">
+                                <div class="col-xs-12"><h3>Not a member yet? Sign Up</h3></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <form id="signupForm" method="post" action="/register">
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fa fa-envelope fa-2x"></i></span>
+                                            <input id="email" class="form-control input-lg" placeholder="Email" required="required" maxlength="100" type="text" name="email" value="">
+                                        </div>
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fa fa-asterisk fa-2x"></i></span>
+                                            <input id="password" class="form-control input-lg" placeholder="Password" required="required" maxlength="60" type="password" name="password">
+                                        </div>
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="fa fa-asterisk fa-2x"></i></span>
+                                            <input id="password_confirmation" class="form-control input-lg" placeholder="Confirm Password" required="required" maxlength="60" type="password" name="password_confirmation">
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" id="btn-signup" class="btn btn-block btn-primary btn-lg">Sign Up</button>
+                                        </div>
+                                    </form>
+                                    <div class="form-group">
+                                        <p>By clicking on "Sign Up", you agree to the <a href="#terms-of-service" target="_blank">Terms of Service</a> and the <a href="#privacy" target="_blank">Privacy Policy</a>.</p>
+                                    </div>
+                                </div><!-- end of column -->
+                            </div><!-- end of row -->
+                        </div><!-- end of column 2 -->
+                    </div><!-- end of well row -->
+                </div><!-- end of well -->
+            </section>
+        </div><!-- end of row -->
     </div>
-  </div>
-</section>
+</div>
