--- a/templates/app/configs/view-locals.ejs
+++ b/templates/app/configs/view-locals.ejs
@@ -4,6 +4,11 @@ module.exports={
     name: '<%=: name %>',
     title: '<%=: name|capitalize %>',
     description: '',
+    <% if(program.session){ -%>
+    flash: function(){
+        return this.flash;
+    },
+    <% } -%>
     <% if(program.auth){ -%>
     user: function(){
         return this.request.user;
